# wave-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
Docs/: v1-tray-roadmap.md  windows-meeting-recorder-build-plan.md
src/wave_notes/: __init__.py  audio.py  cli.py  config.py  notes.py  recorder.py  session.py  transcribe.py  tray.py
tests/: test_contracts.py
