[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-notes"
version = "0.1.0"
description = "Local-first meeting recording, transcription, and notes pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
]

[project.optional-dependencies]
audio = [
  "numpy>=2.0.0",
  "sounddevice>=0.4.6",
]
dev = ["pytest>=8.0.0"]

[project.scripts]
meeting = "wave_notes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
