[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-notes"
version = "0.1.0"
description = "Local-first meeting recording, transcription, and notes pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
]

[project.optional-dependencies]
audio = [
  "numpy>=2.0.0",
  "sounddevice>=0.4.6",
]
tray = [
  "pillow>=10.0.0",
  "pystray>=0.19.5",
]
dev = ["pytest>=8.0.0"]

[project.scripts]
meeting = "wave_notes.cli:main"
meeting-tray = "wave_notes.tray:main"

[tool.setuptools.packages.find]
where = ["src"]
